<resources>
    <string name="app_name">convert</string>
    <!--titles-->
    <string name="title">BASIC BAKER</string>
    <string name="forTitle">for</string>
    <string name="amountTitle">AMOUNT</string>
    <string name="thatTitle">THAT</string>
    <string name="thisTitle">THIS</string>
    <string name="toTitle">to</string>
    <string name="output">#</string>

    <!--variables-->


    <!--spinners-->
    <string-array name="forSpinArray">
        <item>imperial</item>
        <item>metric</item>
    </string-array>

    <string-array name="imperialArray">
        <item>cups</item>
        <item>tablespoons</item>
        <item>teaspoons</item>
        <item>ounces</item>
        <item>pounds</item>
    </string-array>

    <string-array name="metricArray">
        <item>milliliter</item>
        <item>grams</item>
        <item>liter</item>
        <item>kilogram</item>
    </string-array>
</resources>
